# sample-openclaw-multi-tenant-platform

./: .gitignore  .gitleaksignore  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  OPTIMIZATION-SUMMARY.md  README.md  THREAT-MODEL.md  cognito-config.json  e2e-issue-signup-flow.md  platform-config.json  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md
auth-ui/: admin.html  config.js  index.html  manifest.json  package.json  privacy.html  terms.html
cdk/: .gitignore  README.md  cdk-us-east-1.json  cdk.json.example  package-lock.json  package.json
docs/: admin-journey.md  adr.md  agent-sandbox.md  architecture.md  argocd.md  comprehensive-optimization-plan.md  demo-cheat-sheet.md  dynamic-stack-naming-design.md  image-update.md  migration-guide.md  missing-documentation.md  naming-convention.md  performance-optimization.md  project-structure-optimization.md  scale-to-zero.md  scaling-limits.md  security.md  self-service-signup.md  tenant-crd.md  terraform.md  testing-strategy.md  troubleshooting.md  usage-tracking.md  user-experience-analysis.md  user-journey.md  versioning-and-tracking.md  webhook-setup.md
examples/: README.md  tenant.yaml
helm/: agent-sandbox-template-runc.yaml  applicationset.yaml  gateway.yaml  values-tenant-example.yaml
operator/: Cargo.toml  Dockerfile  README.md  deny.toml
operator/scripts/: ci-local.sh
operator/src/: config.rs  controller.rs  crdgen.rs  lib.rs  main.rs  metrics.rs  resources.rs  telemetry.rs  types.rs  webhook.rs
operator/yaml/: crd.yaml  deployment.yaml
scripts/: admin-list-tenants.sh  backup-tenant.sh  deploy-all.sh  (+45 more)
(+80 files in other folders)
